# Calc24

./: README.md
Calc24v1/: Calc24.sln
Calc24v1/Calc24Client/: CMakeLists.txt  Calc24Client.cpp  Calc24Client.vcxproj  Calc24Client.vcxproj.filters  TCPClient.cpp  TCPClient.h
Calc24v1/Calc24Client/x64/Debug/: Calc24Client.exe.recipe  Calc24Client.ilk  vc143.idb
Calc24v1/Calc24Client/x64/Debug/Calc24Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calc24Client.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Calc24v1/Calc24Server/: CMakeLists.txt  Calc24Server.cpp  Calc24Server.vcxproj  Calc24Server.vcxproj.filters  Player.cpp  Player.h  TCPServer.cpp  TCPServer.h  protocol.h
Calc24v2/: CMakeLists.txt  calc24v2.sln  calc24v2.vcxproj
Calc24v2/appsrc/: AsyncLog.cpp  AsyncLog.h  Calc24Protocol.h  Calc24Server.cpp  Calc24Server.h  Calc24Session.cpp  Calc24Session.h  main.cpp
Calc24v2/net/: Accept.cpp  Acceptor.h  ByteBuffer.cpp  ByteBuffer.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  IEventDispatcher.h  IOMultiplex.h  ITimerService.h  Poll.cpp  Poll.h  Select.cpp  Select.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  ThreadPoll.cpp  ThreadPoll.h  Timer.cpp  Timer.h  WakeupEventDispatcher.cpp  WakeupEventDispatcher.h
Calc24v2/utils/: util.cpp  util.h
